# OtterlyRustApi

./: .env.example  .gitignore  Cargo.toml
src/: db.rs  main.rs  response.rs  state.rs
src/handlers/: health_handler.rs  mod.rs  serveurs_handler.rs
src/routes/: mod.rs
