[package]
name = "OtterlyRustApi"
version = "0.1.0"
edition = "2024"

[dependencies]
# Framework API
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }

# Async
tokio = { version = "1", features = ["full"] }

# JSON & serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Base de données (SQLx)
mysql = "23"       # Crate officielle MySQL

# Auth / sécurité
jsonwebtoken = "9"
argon2 = "0.5"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Logs
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# Env
dotenvy = "0.15"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Configurations
config = "0.14"
chrono = { version = "0.4", features = ["serde"] }